# react-native-nitro-tor

./: .gitignore  Cargo.toml  LICENSE  README.md  ReactNativeNitroTor.podspec  craby.toml  flake.nix  package.json  react-native.config.js
.github/workflows/: ci.yml  release.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/stubs/: CMakeLists.txt  ReactNativeNitroTor_stub.cpp  ReactNativeNitroTor_stub.h
cpp/: CrabyUtils.hpp  CxxReactNativeNitroTorModule.cpp  CxxReactNativeNitroTorModule.hpp  bridging-generated.hpp
crates/lib/: Cargo.toml  build.rs
crates/lib/include/: CrabySignals.h
crates/lib/src/: ffi.rs  generated.rs  lib.rs  react_native_nitro_tor_impl.rs  tor.rs
docker/: Dockerfile  README.md  build.sh  run.sh
example/: App.tsx  app.json  package.json
example/android/: gradle.properties  gradlew.bat  settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/NitroTorExample/: AppDelegate.swift  Info.plist
example/ios/NitroTorExample.xcodeproj/: project.pbxproj
example/ios/ReactNativeNitroTorExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/ReactNativeNitroTorExample.xcodeproj/: project.pbxproj
example/ios/ReactNativeNitroTorExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: ReactNativeNitroTorModuleProvider.mm
ios/framework/libreactnativenitrotor.xcframework/: Info.plist
ios/include/: CrabySignals.h
ios/src/: ffi.rs.cc
src/: NativeReactNativeNitroTor.ts  index.ts
(+11 files in other folders)
