[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "unwind"

[patch."https://github.com/niteshbalusu11/libtor-sys"]
libtor-sys = { path = "vendor/libtor-sys" }
