[package]
name = "react_native_nitro_tor"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.99"
craby = "0.1.0-rc.2"
cxx = { version = "1.0.187", features = ["c++17"] }
tor = {git = "https://github.com/niteshbalusu11/tor-rust-sdk", rev = "3c82d8ed8ff9ba9e890a7369a2a20b203587667b"}
logger = {git = "https://github.com/niteshbalusu11/tor-rust-sdk", rev = "3c82d8ed8ff9ba9e890a7369a2a20b203587667b"}
once_cell = "1.20.3"
serde = { version="1.0.217", features = ["derive"], default-features = false }
serde_json = "1.0.138"

[build-dependencies]
craby_build = { version = "0.1.0-rc.2", features = ["cxx"] }

[lib]
name = "reactnativenitrotor"
crate-type = ["staticlib"]
